# coffer

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  bunfig.toml  finance.config.ts.example  package.json  playwright.config.ts  tsconfig.json
pipeline/: pyproject.toml  rules.example.yaml
pipeline/src/finance_pipeline/: __init__.py  backfill_alchemy_history.py  backfill_coingecko.py  backfill_crypto.py  backfill_defillama.py  backfill_dex_basis.py  backfill_prices.py  backfill_quantity_walk.py  backup.py  cache.py  categorize.py  cli.py  config.py  db.py  env.py  events.py  http.py  ingest.py  ledger.py  location.py  positions.py  reconcile.py  trips.py  validate.py
pipeline/src/finance_pipeline/emails/: __init__.py  aggregate.py  amazon.py  classify.py  db.py  (+12 more)
pipeline/tests/: conftest.py  invariants.py  scenarios.py  test_alchemy.py  test_backfill_prices.py  test_backfill_quantity_walk.py  test_categorize.py  test_coerce_item_amounts.py  test_cointracker_lots.py  test_config.py  test_email_dispatch.py  test_email_extract.py  test_email_extractors_anthropic.py  test_email_extractors_openai.py  test_email_fetchers_imap.py  test_email_fetchers_integration.py  test_email_fetchers_manual.py  test_email_interfaces.py  test_email_match.py  test_events.py  test_invariants.py  test_learned_rules.py  test_ledger.py  test_normalize_item_categories.py  test_positions.py  test_reconcile.py  test_reconcile_transfers.py  test_scenarios.py  test_scenarios_meta.py  test_simplefin.py  test_teamwork_parser.py  test_trips.py  test_walker_replay.py  test_zerion.py
(+321 files in other folders)
