[project]
name = "finance-pipeline"
version = "0.1.0"
description = "Personal finance ingestion and categorization pipeline"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
]
email = [
  "google-api-python-client>=2.130",
  "google-auth-oauthlib>=1.2",
  "google-auth-httplib2>=0.2",
  "beautifulsoup4>=4.12",
]
scrape = [
  "playwright>=1.40",
]

[project.scripts]
finance = "finance_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
